changed how duplicate items are handled.