@@ -3,6 +3,7 @@ package org.cubord.cubordbackend.repository;
 import org.cubord.cubordbackend.domain.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
@@ -293,22 +294,6 @@ class PantryItemRepositoryTest {
     }
 
     @Test
-    @DisplayName("Test findByLocationIdAndProductId for duplicate detection")
-    void testFindByLocationIdAndProductId() {
-        // When
-        Optional<PantryItem> milkInFridge = pantryItemRepository
-                .findByLocationIdAndProductId(testLocation2.getId(), testProduct1.getId());
-        Optional<PantryItem> breadInFridge = pantryItemRepository
-                .findByLocationIdAndProductId(testLocation2.getId(), testProduct2.getId());
-
-        // Then
-        assertThat(milkInFridge).isPresent();
-        assertThat(milkInFridge.get().getId()).isEqualTo(testPantryItem1.getId());
-
-        assertThat(breadInFridge).isEmpty(); // Bread is not in the fridge
-    }
-
-    @Test
     @DisplayName("Test findByLocation_HouseholdId returns items for household")
     void testFindByLocationHouseholdId() {
         // When
@@ -466,7 +451,7 @@ class PantryItemRepositoryTest {
 
         // Then
         assertThat(dairyItems).hasSize(1);
-        assertThat(dairyItems.get(0).getProduct().getName()).isEqualTo("Milk");
+        assertThat(dairyItems.getFirst().getProduct().getName()).isEqualTo("Milk");
     }
 
     // Edge Cases and Error Conditions
@@ -493,23 +478,6 @@ class PantryItemRepositoryTest {
     }
 
     @Test
-    @DisplayName("Test existsByLocationIdAndProductId for duplicate checking")
-    void testExistsByLocationIdAndProductId() {
-        // When & Then
-        assertThat(pantryItemRepository.existsByLocationIdAndProductId(
-                testLocation2.getId(), testProduct1.getId())).isTrue(); // Milk in fridge exists
-
-        assertThat(pantryItemRepository.existsByLocationIdAndProductId(
-                testLocation2.getId(), testProduct2.getId())).isFalse(); // Bread not in fridge
-
-        assertThat(pantryItemRepository.existsByLocationIdAndProductId(
-                null, testProduct1.getId())).isFalse(); // Null location
-
-        assertThat(pantryItemRepository.existsByLocationIdAndProductId(
-                testLocation1.getId(), null)).isFalse(); // Null product
-    }
-
-    @Test
     @DisplayName("Test countByLocationId returns correct counts")
     void testCountByLocationId() {
         // When & Then
@@ -526,18 +494,7 @@ class PantryItemRepositoryTest {
         assertThat(pantryItemRepository.countByLocation_HouseholdId(testHousehold2.getId())).isEqualTo(1);
     }
 
-    @Test
-    @DisplayName("Test deleteByLocationIdAndProductId removes specific item")
-    void testDeleteByLocationIdAndProductId() {
-        // When
-        int deletedCount = pantryItemRepository.deleteByLocationIdAndProductId(
-                testLocation2.getId(), testProduct1.getId());
 
-        // Then
-        assertThat(deletedCount).isEqualTo(1);
-        assertThat(pantryItemRepository.findById(testPantryItem1.getId())).isEmpty();
-        assertThat(pantryItemRepository.findAll()).hasSize(3); // One item removed
-    }
 
     // Transaction and Concurrency Tests
 
@@ -569,4 +526,379 @@ class PantryItemRepositoryTest {
         assertThat(savedItems).hasSize(2);
         assertThat(pantryItemRepository.findAll()).hasSize(6); // 4 existing + 2 new
     }
+
+    // Add these test methods to your existing PantryItemRepositoryTest class
+
+@Nested
+@DisplayName("Expiration-Date-Aware Duplicate Detection Tests")
+class ExpirationDateDuplicateDetectionTests {
+
+    @Test
+    @DisplayName("Test findByLocationIdAndProductIdAndExpirationDate finds exact matches")
+    void testFindByLocationIdAndProductIdAndExpirationDate() {
+        // Given
+        LocalDate specificDate = LocalDate.now().plusDays(5);
+        
+        // When
+        Optional<PantryItem> exactMatch = pantryItemRepository
+                .findByLocationIdAndProductIdAndExpirationDate(
+                        testLocation2.getId(), 
+                        testProduct1.getId(), 
+                        specificDate);
+        
+        Optional<PantryItem> noMatch = pantryItemRepository
+                .findByLocationIdAndProductIdAndExpirationDate(
+                        testLocation2.getId(), 
+                        testProduct1.getId(), 
+                        LocalDate.now().plusDays(10)); // Different date
+        
+        // Then
+        assertThat(exactMatch).isPresent();
+        assertThat(exactMatch.get().getId()).isEqualTo(testPantryItem1.getId());
+        assertThat(noMatch).isEmpty();
+    }
+
+    @Test
+    @DisplayName("Test findByLocationIdAndProductIdAndExpirationDateIsNull for items without expiration")
+    void testFindByLocationIdAndProductIdAndExpirationDateIsNull() {
+        // Given - Create item without expiration date
+        PantryItem itemWithoutExpiration = PantryItem.builder()
+                .id(UUID.randomUUID())
+                .product(testProduct3)
+                .location(testLocation1)
+                .quantity(3)
+                .unitOfMeasure("cans")
+                .expirationDate(null) // No expiration date
+                .build();
+        entityManager.persistAndFlush(itemWithoutExpiration);
+        entityManager.clear();
+        
+        // When
+        Optional<PantryItem> foundItem = pantryItemRepository
+                .findByLocationIdAndProductIdAndExpirationDateIsNull(
+                        testLocation1.getId(), 
+                        testProduct3.getId());
+        
+        // Then
+        assertThat(foundItem).isPresent();
+        assertThat(foundItem.get().getExpirationDate()).isNull();
+    }
+
+    @Test
+    @DisplayName("Test existsByLocationIdAndProductIdAndExpirationDate for exact duplicate checking")
+    void testExistsByLocationIdAndProductIdAndExpirationDate() {
+        // Given
+        LocalDate existingDate = LocalDate.now().plusDays(5);
+        LocalDate nonExistentDate = LocalDate.now().plusDays(15);
+        
+        // When & Then
+        assertThat(pantryItemRepository.existsByLocationIdAndProductIdAndExpirationDate(
+                testLocation2.getId(), testProduct1.getId(), existingDate)).isTrue();
+        
+        assertThat(pantryItemRepository.existsByLocationIdAndProductIdAndExpirationDate(
+                testLocation2.getId(), testProduct1.getId(), nonExistentDate)).isFalse();
+    }
+
+    @Test
+    @DisplayName("Test existsByLocationIdAndProductIdAndExpirationDateIsNull")
+    void testExistsByLocationIdAndProductIdAndExpirationDateIsNull() {
+        // Given - Create item without expiration date
+        PantryItem itemWithoutExpiration = PantryItem.builder()
+                .id(UUID.randomUUID())
+                .product(testProduct2)
+                .location(testLocation2)
+                .quantity(2)
+                .expirationDate(null)
+                .build();
+        entityManager.persistAndFlush(itemWithoutExpiration);
+        entityManager.clear();
+        
+        // When & Then
+        assertThat(pantryItemRepository.existsByLocationIdAndProductIdAndExpirationDateIsNull(
+                testLocation2.getId(), testProduct2.getId())).isTrue();
+        
+        assertThat(pantryItemRepository.existsByLocationIdAndProductIdAndExpirationDateIsNull(
+                testLocation1.getId(), testProduct2.getId())).isFalse(); // Different location
+    }
+
+    @Test
+    @DisplayName("Test deleteByLocationIdAndProductIdAndExpirationDate removes specific variant")
+    void testDeleteByLocationIdAndProductIdAndExpirationDate() {
+        // Given
+        LocalDate targetDate = LocalDate.now().plusDays(5);
+        
+        // When
+        int deletedCount = pantryItemRepository.deleteByLocationIdAndProductIdAndExpirationDate(
+                testLocation2.getId(), testProduct1.getId(), targetDate);
+        
+        // Then
+        assertThat(deletedCount).isEqualTo(1);
+        assertThat(pantryItemRepository.findById(testPantryItem1.getId())).isEmpty();
+        assertThat(pantryItemRepository.findAll()).hasSize(3); // One removed
+    }
+
+    @Test
+    @DisplayName("Test deleteByLocationIdAndProductIdAndExpirationDateIsNull")
+    void testDeleteByLocationIdAndProductIdAndExpirationDateIsNull() {
+        // Given - Create item without expiration date
+        PantryItem itemWithoutExpiration = PantryItem.builder()
+                .id(UUID.randomUUID())
+                .product(testProduct1)
+                .location(testLocation1)
+                .quantity(4)
+                .expirationDate(null)
+                .build();
+        PantryItem saved = entityManager.persistAndFlush(itemWithoutExpiration);
+        entityManager.clear();
+        
+        // When
+        int deletedCount = pantryItemRepository.deleteByLocationIdAndProductIdAndExpirationDateIsNull(
+                testLocation1.getId(), testProduct1.getId());
+        
+        // Then
+        assertThat(deletedCount).isEqualTo(1);
+        assertThat(pantryItemRepository.findById(saved.getId())).isEmpty();
+    }
 }
+
+@Nested
+@DisplayName("Product Variant Query Tests")
+class ProductVariantQueryTests {
+
+    @Test
+    @DisplayName("Test findByLocationIdAndProductIdOrderByExpirationDateAsc returns variants sorted by expiration")
+    void testFindByLocationIdAndProductIdOrderByExpirationDateAsc() {
+        // Given - Create multiple variants of same product with different expiration dates
+        PantryItem variant1 = PantryItem.builder()
+                .id(UUID.randomUUID())
+                .product(testProduct1)
+                .location(testLocation1)
+                .quantity(2)
+                .expirationDate(LocalDate.now().plusDays(3))
+                .build();
+        
+        PantryItem variant2 = PantryItem.builder()
+                .id(UUID.randomUUID())
+                .product(testProduct1)
+                .location(testLocation1)
+                .quantity(1)
+                .expirationDate(LocalDate.now().plusDays(7))
+                .build();
+        
+        PantryItem variant3 = PantryItem.builder()
+                .id(UUID.randomUUID())
+                .product(testProduct1)
+                .location(testLocation1)
+                .quantity(3)
+                .expirationDate(LocalDate.now().plusDays(1))
+                .build();
+        
+        entityManager.persistAndFlush(variant1);
+        entityManager.persistAndFlush(variant2);
+        entityManager.persistAndFlush(variant3);
+        entityManager.clear();
+        
+        // When
+        List<PantryItem> variants = pantryItemRepository
+                .findByLocationIdAndProductIdOrderByExpirationDateAsc(
+                        testLocation1.getId(), testProduct1.getId());
+        
+        // Then
+        assertThat(variants).hasSize(3);
+        assertThat(variants.get(0).getExpirationDate()).isEqualTo(LocalDate.now().plusDays(1)); // Earliest first
+        assertThat(variants.get(1).getExpirationDate()).isEqualTo(LocalDate.now().plusDays(3));
+        assertThat(variants.get(2).getExpirationDate()).isEqualTo(LocalDate.now().plusDays(7)); // Latest last
+    }
+
+    @Test
+    @DisplayName("Test findByLocationIdAndProductIdOrderByExpirationDateNullsLast handles null expiration dates")
+    void testFindByLocationIdAndProductIdOrderByExpirationDateNullsLast() {
+        // Given
+        PantryItem variantWithExpiration = PantryItem.builder()
+                .id(UUID.randomUUID())
+                .product(testProduct3)
+                .location(testLocation1)
+                .quantity(2)
+                .expirationDate(LocalDate.now().plusDays(30))
+                .build();
+        
+        PantryItem variantWithoutExpiration = PantryItem.builder()
+                .id(UUID.randomUUID())
+                .product(testProduct3)
+                .location(testLocation1)
+                .quantity(1)
+                .expirationDate(null) // No expiration date
+                .build();
+        
+        entityManager.persistAndFlush(variantWithExpiration);
+        entityManager.persistAndFlush(variantWithoutExpiration);
+        entityManager.clear();
+        
+        // When
+        List<PantryItem> variants = pantryItemRepository
+                .findByLocationIdAndProductIdOrderByExpirationDateNullsLast(
+                        testLocation1.getId(), testProduct3.getId());
+        
+        // Then
+        assertThat(variants).hasSize(3); // Including existing testPantryItem3
+        
+        // Items with expiration dates should come first
+        List<PantryItem> itemsWithExpiration = variants.stream()
+                .filter(item -> item.getExpirationDate() != null)
+                .toList();
+        List<PantryItem> itemsWithoutExpiration = variants.stream()
+                .filter(item -> item.getExpirationDate() == null)
+                .toList();
+        
+        assertThat(itemsWithExpiration).hasSize(2);
+        assertThat(itemsWithoutExpiration).hasSize(1);
+        
+        // Verify nulls are last in the list
+        assertThat(variants.getLast().getExpirationDate()).isNull();
+    }
+}
+
+@Nested
+@DisplayName("Enhanced Query Tests")
+class EnhancedQueryTests {
+
+    @Test
+    @DisplayName("Test findByLocation_HouseholdIdOrderByProductAndExpiration returns sorted results")
+    void testFindByLocationHouseholdIdOrderByProductAndExpiration() {
+        // When
+        List<PantryItem> sortedItems = pantryItemRepository
+                .findByLocation_HouseholdIdOrderByProductAndExpiration(testHousehold1.getId());
+        
+        // Then
+        assertThat(sortedItems).hasSize(3);
+        
+        // Should be sorted by product name first, then by expiration date
+        assertThat(sortedItems.get(0).getProduct().getName()).isEqualTo("Bread");
+        assertThat(sortedItems.get(1).getProduct().getName()).isEqualTo("Canned Beans");
+        assertThat(sortedItems.get(2).getProduct().getName()).isEqualTo("Milk");
+    }
+
+    @Test
+    @DisplayName("Test findByLocationIdOrderByProductAndExpiration")
+    void testFindByLocationIdOrderByProductAndExpiration() {
+        // When
+        List<PantryItem> sortedItems = pantryItemRepository
+                .findByLocationIdOrderByProductAndExpiration(testLocation1.getId());
+        
+        // Then
+        assertThat(sortedItems).hasSize(2);
+        assertThat(sortedItems.get(0).getProduct().getName()).isEqualTo("Bread");
+        assertThat(sortedItems.get(1).getProduct().getName()).isEqualTo("Canned Beans");
+    }
+
+    @Test
+    @DisplayName("Test countDistinctProductsByHouseholdId")
+    void testCountDistinctProductsByHouseholdId() {
+        // When
+        long distinctProductCount = pantryItemRepository
+                .countDistinctProductsByHouseholdId(testHousehold1.getId());
+        
+        // Then
+        assertThat(distinctProductCount).isEqualTo(3); // Milk, Bread, Canned Beans
+    }
+
+    @Test
+    @DisplayName("Test countExpiringItemsByHouseholdIdAndDate")
+    void testCountExpiringItemsByHouseholdIdAndDate() {
+        // When
+        LocalDate nextWeek = LocalDate.now().plusDays(7);
+        long expiringCount = pantryItemRepository
+                .countExpiringItemsByHouseholdIdAndDate(testHousehold1.getId(), nextWeek);
+        
+        // Then
+        assertThat(expiringCount).isEqualTo(2); // Milk and Bread expire within a week
+    }
+
+    @Test
+    @DisplayName("Test sumQuantityByLocationAndProduct")
+    void testSumQuantityByLocationAndProduct() {
+        // Given - Create another milk item in same location to test aggregation
+        PantryItem additionalMilk = PantryItem.builder()
+                .id(UUID.randomUUID())
+                .product(testProduct1)
+                .location(testLocation2)
+                .quantity(1)
+                .expirationDate(LocalDate.now().plusDays(4))
+                .build();
+        entityManager.persistAndFlush(additionalMilk);
+        entityManager.clear();
+        
+        // When
+        Integer totalQuantity = pantryItemRepository
+                .sumQuantityByLocationAndProduct(testLocation2.getId(), testProduct1.getId());
+        
+        // Then
+        assertThat(totalQuantity).isEqualTo(3); // 2 (original) + 1 (additional)
+    }
+}
+
+    @Nested
+    @DisplayName("Null Expiration Date Handling Tests")
+    class NullExpirationDateTests {
+
+        @Test
+        @DisplayName("Test findByExpirationDateIsNull")
+        void testFindByExpirationDateIsNull() {
+            // Given - Create items without expiration dates
+            PantryItem itemWithoutExpiration1 = PantryItem.builder()
+                    .id(UUID.randomUUID())
+                    .product(testProduct3)
+                    .location(testLocation1)
+                    .quantity(5)
+                    .expirationDate(null)
+                    .build();
+
+            PantryItem itemWithoutExpiration2 = PantryItem.builder()
+                    .id(UUID.randomUUID())
+                    .product(testProduct2)
+                    .location(testLocation2)
+                    .quantity(2)
+                    .expirationDate(null)
+                    .build();
+
+            entityManager.persistAndFlush(itemWithoutExpiration1);
+            entityManager.persistAndFlush(itemWithoutExpiration2);
+            entityManager.clear();
+
+            // When
+            List<PantryItem> itemsWithoutExpiration = pantryItemRepository.findByExpirationDateIsNull();
+
+            // Then
+            assertThat(itemsWithoutExpiration).hasSize(2);
+            assertThat(itemsWithoutExpiration).allMatch(item -> item.getExpirationDate() == null);
+        }
+
+        @Test
+        @DisplayName("Test findByExpirationDateIsNullAndLocation_HouseholdId")
+        void testFindByExpirationDateIsNullAndLocationHouseholdId() {
+            // Given
+            PantryItem itemWithoutExpiration = PantryItem.builder()
+                    .id(UUID.randomUUID())
+                    .product(testProduct1)
+                    .location(testLocation1)
+                    .quantity(3)
+                    .expirationDate(null)
+                    .build();
+
+            entityManager.persistAndFlush(itemWithoutExpiration);
+            entityManager.clear();
+
+            // When
+            List<PantryItem> itemsInHousehold1 = pantryItemRepository
+                    .findByExpirationDateIsNullAndLocation_HouseholdId(testHousehold1.getId());
+            List<PantryItem> itemsInHousehold2 = pantryItemRepository
+                    .findByExpirationDateIsNullAndLocation_HouseholdId(testHousehold2.getId());
+
+            // Then
+            assertThat(itemsInHousehold1).hasSize(1);
+            assertThat(itemsInHousehold1.getFirst().getExpirationDate()).isNull();
+            assertThat(itemsInHousehold2).isEmpty();
+        }
+    }
+}
+
